# text2num

./: .gitignore  .readthedocs.yml  Cargo.toml  LICENSE  MANIFEST.in  README.md  README.rst  main.py  mypy.ini  pyproject.toml  setup.py  test.py
.circleci/: config.yml
.github/workflows/: CI.yml
doc/: conf.py  contribute.rst  index.rst  quickstart.rst
docs/: api.rst  conf.py  contributing.rst  index.rst  license.rst  quickstart.rst
python/text_to_num/: __init__.py
src/: lib.rs
tests/: __init__.py  test_binding.py  test_text_to_num.py  test_text_to_num_ca.py  test_text_to_num_de.py  test_text_to_num_en.py  test_text_to_num_es.py  test_text_to_num_fr.py  test_text_to_num_pl.py  test_text_to_num_pol.py  test_text_to_num_pt.py  test_text_to_num_pt_br.py  test_text_to_num_ptbr.py  test_text_to_num_ru.py
text_to_num/: __init__.py  parsers.py  transforms.py
text_to_num/lang/: __init__.py  base.py  brazilian_portuguese.py  catalan.py  english.py  french.py  german.py  polish.py  portuguese.py  portuguese_br.py  russian.py  spanish.py
text_to_num/tests/: test_text_to_num.py
